finished python jupyter

--- a/Python Basics 2.ipynb
+++ b/Python Basics 2.ipynb
@@ -12,11 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -53,10 +49,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'item1': 1, 'item2': False, 'item3': [1, 2, 3], 'item4': {}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mydictionary = {\"item1\":1,\n",
+    "                \"item2\":False,\n",
+    "                \"item3\":[1,2,3],\n",
+    "                \"item4\": {}\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "mydictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Amogh', 'age': 24, 'Likes': 'Bikes'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newDict = dict([('name', 'Amogh'), ('age', 24), ('Likes', 'Bikes')])\n",
+    "newDict"
+   ]
   },
   {
    "attachments": {},
@@ -68,10 +105,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amogh'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newDict['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2): 'one Two', 1: 'one', 'one': True}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tupleDict = {(1,2) : \"one Two\", 1: 'one', 'one': True}\n",
+    "tupleDict"
+   ]
   },
   {
    "attachments": {},
@@ -83,10 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'jayant', 'age': 24, 'Likes': 'Bikes'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "newDict['name'] = 'jayant'\n",
+    "print(newDict)"
+   ]
   },
   {
    "attachments": {},
@@ -98,10 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'not given'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newDict.get('profession', 'not given')"
+   ]
   },
   {
    "attachments": {},
@@ -117,7 +212,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number = 5\n",
+    "if number >= 20:\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +244,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number = 5\n",
+    "if not number >= 20:\n",
+    " print(this is a life)\n",
+    "elif == 5:\n",
+    " \n",
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,8 +375,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
