--- a/Python Basics 3.ipynb
+++ b/Python Basics 3.ipynb
@@ -11,10 +11,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 5\n",
+    "if num % 2 == 0:\n",
+    "    print(\"the number is even\")\n",
+    "else:\n",
+    "    print('the number is odd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number is odd\n",
+      "the number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 6\n",
+    "def checker (num):\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"the number is even\")\n",
+    "    else:\n",
+    "        print('the number is odd')\n",
+    "\n",
+    "checker(5)\n",
+    "checker(6)"
+   ]
   },
   {
    "attachments": {},
@@ -26,10 +66,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumPrinter(num_array):\n",
+    "    sum = 0\n",
+    "    for i in num_array:\n",
+    "        sum += i\n",
+    "    print(sum)\n",
+    "myArr =[2,4,6,8]\n",
+    "sumPrinter([1,2,3])\n",
+    "sumPrinter(myArr)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "multiply() missing 1 required positional argument: 'c'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m*\u001b[39mb\u001b[38;5;241m*\u001b[39mc)\n\u001b[0;32m      3\u001b[0m multiply(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mmultiply\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m multiply(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: multiply() missing 1 required positional argument: 'c'"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a,b,c):\n",
+    "    print(a*b*c)\n",
+    "multiply(1,2,3)\n",
+    "multiply(1,2)\n",
+    "multiply(1,2,3,4)"
+   ]
   },
   {
    "attachments": {},
@@ -41,10 +132,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I live at 10, 18th main, Banglore, Karnatka, India\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printAddress(doorNumber, street, city, state, country=\"India\"):\n",
+    "    print(f\"I live at {doorNumber}, {street}, {city}, {state}, {country}\")\n",
+    "printAddress(10, \"18th main\", \"Banglore\", \"Karnatka\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "printAddress() missing 1 required positional argument: 'state'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprintAddress\u001b[39m(doorNumber, street, city, state, country\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndia\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mI live at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoorNumber\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstreet\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcity\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstate\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mprintAddress\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m18th main\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mBanglore\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mKarnatka\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: printAddress() missing 1 required positional argument: 'state'"
+     ]
+    }
+   ],
+   "source": [
+    "def printAddress(doorNumber, street, city, state, country=\"India\"):\n",
+    "    print(f\"I live at {doorNumber}, {street}, {city}, {state}, {country}\")\n",
+    "printAddress(\"18th main\", \"Banglore\", \"Karnatka\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I live at 10, 18th main, Banglore, Karnatka, Bangladesh\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printAddress(doorNumber, street, city, state, country=\"India\"):\n",
+    "    print(f\"I live at {doorNumber}, {street}, {city}, {state}, {country}\")\n",
+    "printAddress(10, \"18th main\", \"Banglore\", \"Karnatka\", \"Bangladesh\")"
+   ]
   },
   {
    "attachments": {},
@@ -56,10 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply2(a,b,c):\n",
+    "    return a*b*c\n",
+    "val = multiply2(1,2,3)\n",
+    "print(val)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -71,10 +235,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mresult\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivideByZero\u001b[39m(num):\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m num\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mdivideByZero\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[20], line 3\u001b[0m, in \u001b[0;36mdivideByZero\u001b[1;34m(num)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivideByZero\u001b[39m(num):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnum\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "# try - except\n",
+    "def divideByZero(num):\n",
+    "    return num/0\n",
+    "divideByZero(2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I ran into some error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    divideByZero(2)\n",
+    "except:\n",
+    "    print(\"I ran into some error\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "num = 3.14\n",
+    "print(math.floor(num))\n",
+    "print(math.factorial(5))"
+   ]
   },
   {
    "attachments": {},
@@ -96,10 +342,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 True 0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vehicle:\n",
+    "    tyres = 0\n",
+    "    engine = True\n",
+    "    windows = 0 \n",
+    "\n",
+    "myVehicle = vehicle()\n",
+    "type(myVehicle)\n",
+    "print(myVehicle.tyres,\n",
+    "      myVehicle.engine,\n",
+    "      myVehicle.windows)\n",
+    "\n",
+    "myVehicle.tyres = 2\n",
+    "print(myVehicle.tyres)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +379,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vehicle:\n",
+    "    tyres = 0\n",
+    "    engine = True\n",
+    "    windows = 0 \n",
+    "    moving = False\n",
+    "\n",
+    "    def move(self):\n",
+    "        self.moving = True \n",
+    "    def stop(self):\n",
+    "        self.stop = False\n",
+    "    \n",
+    "myVehicle = vehicle()\n",
+    "print(myVehicle.moving)\n",
+    "myVehicle.move()\n",
+    "print(myVehicle.moving)\n",
+    "myVehicle.stop\n",
+    "print(myVehicle.moving)\n",
+    "    \n"
+   ]
   },
   {
    "attachments": {},
@@ -125,10 +423,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 True 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Twowheeler:\n",
+    "    def __init__(self):\n",
+    "        self.tyres = 0\n",
+    "        self.engine = True\n",
+    "        self.windows = 0 \n",
+    "my_2_wheeler = Twowheeler()\n",
+    "print(my_2_wheeler.tyres, my_2_wheeler.engine, my_2_wheeler.windows)\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -140,10 +455,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 True 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CustomVehicle:\n",
+    "    def __init__(self, wheels = 100, engine = True, windows = None):\n",
+    "        self.tyres = wheels\n",
+    "        self.engine = engine\n",
+    "        self.windows = windows\n",
+    "my_vehicle = CustomVehicle(6, False, 4)\n",
+    "print(myVehicle.tyres, myVehicle.engine, myVehicle.windows)\n",
+    " \n",
+    "\n",
+    "       "
+   ]
   },
   {
    "attachments": {},
@@ -176,10 +510,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "True\n",
+      "None\n",
+      "is moving: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class CustomVehicle:\n",
+    "    def __init__(self, wheels = 100, engine = True, windows = None):\n",
+    "        self.tyres = wheels\n",
+    "        self.engine = engine\n",
+    "        self.windows = windows\n",
+    "    def move(self):\n",
+    "        self.moving = True\n",
+    "class Car(CustomVehicle):\n",
+    "    def show_properties(self):\n",
+    "       print(self.tyres)\n",
+    "       print(self.engine)\n",
+    "       print(self.windows)\n",
+    "\n",
+    "my_car = Car()\n",
+    "my_car.show_properties()\n",
+    "my_car.move() # <.from the parent class\n",
+    "print(\"is moving:\",my_car.moving)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,8 +632,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
